# Vision-to-3D-ROS-Pipeline

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: robot_ros.launch  vision_ros.launch
msg/: EdgePixel.msg
rviz/: task2.rviz  task3.rviz
scripts/: edge_dir_service.py  edge_marker_node.py  edge_ros_node.py
src/edge_detection/: edge_detector.py
srv/: DetectEdgesFromDir.srv
