<?xml version="1.0"?>
<package format="2">
  <name>edge_detection</name>
  <version>0.1.0</version>
  <description>Checkerboard edge detection (Task 1) + ROS service/stream (Task 2)</description>

  <maintainer email="you@example.com">Himanshu</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies for msgs/srvs and C++/Python nodes -->
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- For roscpp/gtest if you add tests in future -->
  <test_depend>rostest</test_depend>
</package>

